--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -33,7 +33,7 @@
 
         <!-- Notification area -->
         <Border BorderThickness="1" Background="#FFF9F9F9" CornerRadius="10">
-            <Grid>
+            <Grid MaxHeight="60">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <!-- For the ImageIcon -->
@@ -42,7 +42,7 @@
                 </Grid.ColumnDefinitions>
 
                 <ui:ImageIcon Height="25" Width="25" Grid.Column="0" Source="pack://application:,,,/assets/icons/ic_fluent_clipboard_checkmark_16_filled.png" Margin="10,0,10,0"/>
-                <TextBlock x:Name="text" TextWrapping="WrapWithOverflow" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" MaxHeight="60" Padding="10" TextAlignment="Left" Foreground="#FF1A1A1A" FontSize="20" LineHeight="20">
+                <TextBlock x:Name="text" TextWrapping="WrapWithOverflow" Grid.Column="1" VerticalAlignment="Center" MaxHeight="60" Padding="10" TextAlignment="Left" Foreground="#FF1A1A1A" FontSize="20" LineHeight="20">
             <Run Text="Text to display."/>
                 </TextBlock>
             </Grid>
