--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -32,7 +32,7 @@
         </Grid.RenderTransform>
 
         <!-- Notification area -->
-        <Border BorderThickness="1" Background="#E5F9F9F9" CornerRadius="10" Padding="10">
+        <Border BorderThickness="1" Background="#FFF9F9F9" CornerRadius="5" Padding="10" BorderBrush="#19000000">
             <Grid MaxHeight="60">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
