--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -1,35 +1,35 @@
 <Window
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     x:Class="Flyout"
-  Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
-  WindowStyle="None" AllowsTransparency="True" Background="Transparent"
+    Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
+    WindowStyle="None" AllowsTransparency="True" Background="Transparent"
     Topmost="True">
 
-    <Grid RenderTransformOrigin="0,1" >
+    <Grid>
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform ScaleY="1" />
+                <TranslateTransform x:Name="translate" Y="0"/>
+            </TransformGroup>
+        </Grid.RenderTransform>
 
-        <!-- Animation -->
-        <!--<Grid.Triggers>
+        <Grid.Triggers>
             <EventTrigger RoutedEvent="FrameworkElement.Loaded">
                 <BeginStoryboard>
                     <Storyboard>
-                        <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)">
-                            <SplineDoubleKeyFrame KeyTime="0:0:0" Value="0"/>
-                            <SplineDoubleKeyFrame KeyTime="0:0:0.5" Value="1"/>
-                        </DoubleAnimationUsingKeyFrames>
-                        <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)">
-                            <SplineDoubleKeyFrame KeyTime="0:0:2" Value="1"/>
-                            <SplineDoubleKeyFrame KeyTime="0:0:4" Value="0"/>
-                        </DoubleAnimationUsingKeyFrames>
+                        <!-- Fade in animation -->
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.Opacity)"
+                                         From="0" To="1" Duration="0:0:0.1"/>
+                         <!--Move up animation--> 
+                        <DoubleAnimation Storyboard.TargetName="translate"
+                                         Storyboard.TargetProperty="Y"
+                                         From="60" To="0" Duration="0:0:0.07"/>
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
-        </Grid.Triggers>-->
-
-        <Grid.RenderTransform>
-            <ScaleTransform ScaleY="1" />
-        </Grid.RenderTransform>
+        </Grid.Triggers>
 
         <!-- Notification area -->
         <Border BorderThickness="1" Background="#FFF9F9F9" CornerRadius="5" Padding="10" BorderBrush="#19000000">
