Add elipsis when flyout text overflows

--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -42,8 +42,18 @@
                 </Grid.ColumnDefinitions>
 
                 <ui:ImageIcon x:Name="icon" Height="30" Width="26" Grid.Column="0" Source="pack://application:,,,/assets/icons/ic_fluent_clipboard_checkmark_16_filled.png" Margin="5,0,15,0"/>
-                <TextBlock x:Name="text" TextWrapping="WrapWithOverflow" Grid.Column="1" VerticalAlignment="Center" MaxHeight="60" Padding="0" TextAlignment="Left" Foreground="#FF1A1A1A" FontSize="20" LineHeight="20">
-            <Run Text="Text to display."/>
+                <TextBlock x:Name="text" 
+                           TextWrapping="WrapWithOverflow" 
+                           TextTrimming="CharacterEllipsis"
+                           Grid.Column="1" 
+                           VerticalAlignment="Center" 
+                           MaxHeight="60" 
+                           Padding="0" 
+                           TextAlignment="Left" 
+                           Foreground="#FF1A1A1A" 
+                           FontSize="20" 
+                           LineHeight="20">
+                    <Run Text="Text to display."/>
                 </TextBlock>
             </Grid>
         </Border>
