--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -33,19 +33,22 @@
 
         <!-- Notification area -->
         <Border BorderThickness="1" Background="#FFF9F9F9" CornerRadius="5" Padding="10" BorderBrush="#19000000">
-            <Grid MaxHeight="60">
+            <Grid x:Name="grid">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
-                    <!-- For the ImageIcon -->
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
-                    <!-- For the TextBlock to take the remaining space -->
                 </Grid.ColumnDefinitions>
 
                 <ui:ImageIcon x:Name="icon" Height="30" Width="26" Grid.Column="0" Source="pack://application:,,,/assets/icons/ic_fluent_clipboard_checkmark_16_filled.png" Margin="5,0,15,0"/>
+                <Grid x:Name="fileGrid" Grid.Column="1" Visibility="Collapsed">
+                    <ui:ImageIcon x:Name="icon2" Visibility="Visible" Margin="0 0 15 0" Width="29" Height="39"/>
+                    <ui:InfoBadge x:Name="amount" Visibility="Collapsed" Value="0" Severity="Informational" Margin="-10,-10,15,14"/>
+                </Grid>
                 <TextBlock x:Name="text" 
-                           TextWrapping="WrapWithOverflow" 
+                           TextWrapping="Wrap" 
                            TextTrimming="CharacterEllipsis"
-                           Grid.Column="1" 
+                           Grid.Column="2" 
                            VerticalAlignment="Center" 
                            MaxHeight="60" 
                            Padding="0" 
