--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -32,23 +32,28 @@
         </Grid.Triggers>
 
         <!-- Notification area -->
-        <Border BorderThickness="1" Background="#FFF9F9F9" CornerRadius="5" Padding="10" BorderBrush="#19000000">
+        <Border BorderThickness="1" Background="#FFF9F9F9" CornerRadius="5" Padding="10" BorderBrush="#19000000" MaxHeight="300">
             <Grid x:Name="grid">
+                <Grid.RowDefinitions>
+                    <RowDefinition MaxHeight="60"/>
+                    <RowDefinition MaxHeight="120"/>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <ui:ImageIcon x:Name="icon" Height="30" Width="26" Grid.Column="0" Source="pack://application:,,,/assets/icons/ic_fluent_clipboard_checkmark_16_filled.png" Margin="5,0,15,0"/>
-                <Grid x:Name="fileGrid" Grid.Column="1" Visibility="Collapsed">
+                <ui:ImageIcon x:Name="icon" Height="30" Width="26" Grid.Column="0" Grid.Row="0" Source="pack://application:,,,/assets/icons/ic_fluent_clipboard_checkmark_16_filled.png" Margin="5,0,15,0"/>
+                <Grid x:Name="fileGrid" Grid.Column="1" Grid.Row="0" Visibility="Collapsed">
                     <ui:ImageIcon x:Name="icon2" Visibility="Visible" Margin="0 0 15 0" Width="29" Height="39"/>
                     <ui:InfoBadge x:Name="amount" Visibility="Collapsed" Value="0" Severity="Informational" Margin="-10,-10,15,14"/>
                 </Grid>
                 <TextBlock x:Name="text" 
                            TextWrapping="Wrap" 
                            TextTrimming="CharacterEllipsis"
-                           Grid.Column="2" 
+                           Grid.Column="2"
+                           Grid.Row="0"
                            VerticalAlignment="Center" 
                            MaxHeight="60" 
                            Padding="0" 
@@ -58,6 +63,15 @@
                            LineHeight="20">
                     <Run Text="Text to display."/>
                 </TextBlock>
+
+                <ui:Image x:Name="flyoutImage"
+                          Margin="0 10 0 0"
+                          Grid.Row="1"
+                          Grid.ColumnSpan="3"
+                          Stretch="Uniform"
+                          StretchDirection="DownOnly"
+                          Visibility="Collapsed"
+                          />
             </Grid>
         </Border>
 
