--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    x:Class="Flyout"
+    x:Class="copy_flash_wpf.Flyout"
     Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
     WindowStyle="None" AllowsTransparency="True" Background="Transparent"
     Topmost="True">
