--- a/App.xaml
+++ b/App.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:copy_flash_wpf"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:tb="http://www.hardcodet.net/taskbar" 
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="NotifyIcon.xaml"/>
                 <ui:ThemesDictionary Theme="Light" />
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
