--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -4,8 +4,8 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     x:Class="copy_flash_wpf.Flyout"
     Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
-    WindowStyle="None" AllowsTransparency="True" Background="Transparent"
-    Topmost="True">
+    WindowStyle="None" AllowsTransparency="True" Background="{DynamicResource colorNeutralBackground1}"
+    Topmost="True" Foreground="{DynamicResource colorNeutralForeground1}">
 
     <Grid>
         <Grid.RenderTransform>
@@ -32,7 +32,7 @@
         </Grid.Triggers>
 
         <!-- Notification area -->
-        <Border BorderThickness="1" Background="#F2F9F9F9" CornerRadius="5" Padding="10" BorderBrush="#19000000" MaxHeight="300">
+        <Border BorderThickness="1" CornerRadius="5" Padding="10" MaxHeight="300" BorderBrush="{DynamicResource border}">
             <Grid x:Name="grid">
                 <Grid.RowDefinitions>
                     <RowDefinition MaxHeight="60"/>
@@ -58,7 +58,6 @@
                            MaxHeight="60" 
                            Padding="0" 
                            TextAlignment="Left" 
-                           Foreground="#FF1A1A1A" 
                            FontSize="20" 
                            LineHeight="20">
                     <Run Text="Text to display."/>
