--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:copy_flash_wpf"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="copy_flash_wpf.MainWindow"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="500">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:copy_flash_wpf"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="copy_flash_wpf.MainWindow"
+    mc:Ignorable="d"
+    Title="MainWindow" Height="450" Width="500" 
+    Background="{DynamicResource colorNeutralBackground1}" Foreground="{DynamicResource colorNeutralForeground1}">
     <Grid>
         <ui:Button x:Name="myButton" Click="myButton_Click" Content="Click me" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <ui:TextBlock x:Name="copyText" HorizontalAlignment="Center" TextWrapping="Wrap" Text="copytext" VerticalAlignment="Top" Margin="0,279,0,0"/>
