--- a/SystemTrayIcon.xaml
+++ b/SystemTrayIcon.xaml
@@ -1,37 +1,13 @@
 ﻿<Window x:Class="copy_flash_wpf.SystemTrayIcon"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:tb="http://www.hardcodet.net/taskbar"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:local="clr-namespace:copy_flash_wpf"
         mc:Ignorable="d"
-        Title="SystemTrayIcon">
+        Title="SystemTrayIcon" Foreground="{DynamicResource colorNeutralForeground1}" Background="{DynamicResource colorNeutralBackground1}">
 
-    <Window.Resources>
-        <Style x:Key="PopupItemStyle" TargetType="StackPanel">
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Orientation" Value="Horizontal"/>
-            <Setter Property="Margin" Value="0 0 0 5"/>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#ebebeb"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-        <Style x:Key="PopupTextStyle" TargetType="TextBlock">
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Foreground" Value="#FF1A1A1A"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Padding" Value="0 7 10 7"/>
-            <Setter Property="Width" Value="100"/>
-        </Style>
-    </Window.Resources>
-    
     <Grid>
         <tb:TaskbarIcon
                  IconSource="/assets/icons/ic_fluent_clipboard_checkmark_16_filled.ico"
@@ -42,12 +18,10 @@
 
             <tb:TaskbarIcon.TrayToolTip>
                 <Border
-                 Background="#FFF9F9F9"
-                 BorderBrush="#19000000"
                  BorderThickness="2"
                  Padding="10 7 10 7"
                  CornerRadius="4"
-                 Opacity="0.95">
+                 Opacity="0.95" Background="{DynamicResource colorNeutralBackground1}" BorderBrush="{DynamicResource border}">
                     <StackPanel 
                         Grid.Row="1" 
                         HorizontalAlignment="Center" 
@@ -58,7 +32,7 @@
                             Text="CopyFlash"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            Foreground="#FF1A1A1A"
+                            Foreground="{DynamicResource colorNeutralForeground1}"
                             Margin="0 0 10 0"
                             FontSize="12"
                         />
@@ -66,6 +40,7 @@
                             x:Name="TooltipIcon"
                             Symbol="Play24"
                             Filled="True"
+                            Foreground="{DynamicResource colorNeutralForeground1}"
                         />
                     </StackPanel>
                 </Border>
@@ -73,12 +48,10 @@
 
             <tb:TaskbarIcon.TrayPopup>
                 <Border
-                     Background="#FFF9F9F9"
-                     BorderBrush="#19000000"
                      BorderThickness="2"
                      Padding="10 7 10 7"
-                     CornerRadius="4"
-                     Opacity="0.95">
+                     CornerRadius="8"
+                     Opacity="0.95" BorderBrush="{DynamicResource border}" Background="{DynamicResource colorNeutralBackground1}">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition/>
@@ -90,47 +63,50 @@
                         </Grid.ColumnDefinitions>
 
                         <StackPanel
-                            Style="{StaticResource PopupItemStyle}"
+                            Style="{DynamicResource PopupItemStyle}"
                             Grid.Row="0"
                             MouseLeftButtonDown="PopupActivityClick">
                             <ui:SymbolIcon
                                  x:Name="PopupActivitySymbol"
                                  Symbol="Pause24"
-                                 FontSize="20"
+                                 FontSize="16"
                                  Margin="5 0 10 0"
+                                 Foreground="{DynamicResource colorNeutralForeground1}"
                             />
                             <TextBlock
                                 x:Name="PopupActivityText"
                                 Text="Stop"
-                                Style="{StaticResource PopupTextStyle}"
+                                Style="{DynamicResource PopupTextStyle}"
                             />
                         </StackPanel>
                         <StackPanel
-                            Style="{StaticResource PopupItemStyle}"
+                            Style="{DynamicResource PopupItemStyle}"
                             MouseLeftButtonDown="PopupExpandClick"
                             Grid.Row="1">
                             <ui:SymbolIcon
                                 Symbol="Settings24"
-                                FontSize="20"
+                                FontSize="16"
                                 Margin="5 0 10 0"
+                                Foreground="{DynamicResource colorNeutralForeground1}"
                             />
                             <TextBlock
                                 Text="Settings"
-                                Style="{StaticResource PopupTextStyle}"
+                                Style="{DynamicResource PopupTextStyle}"
                             />
                         </StackPanel>
                         <StackPanel
                             MouseLeftButtonDown="PopupExitClick"
                             Grid.Row="2" 
-                            Style="{StaticResource PopupItemStyle}">
+                            Style="{DynamicResource PopupItemStyle}">
                             <ui:SymbolIcon
                                 Symbol="Power24"
-                                FontSize="20"
+                                FontSize="16"
                                 Margin="5 0 10 0"
+                                Foreground="{DynamicResource colorNeutralForeground1}"
                             />
                             <TextBlock
                                 Text="Exit"
-                                Style="{StaticResource PopupTextStyle}"
+                                Style="{DynamicResource PopupTextStyle}"
                             />
                         </StackPanel>
                     </Grid>
