--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -4,7 +4,7 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     x:Class="copy_flash_wpf.Flyout"
     Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
-    WindowStyle="None" AllowsTransparency="True" Background="{DynamicResource colorNeutralBackground1}"
+    WindowStyle="None" AllowsTransparency="True" Background="Transparent"
     Topmost="True" Foreground="{DynamicResource colorNeutralForeground1}">
 
     <Grid>
@@ -32,7 +32,7 @@
         </Grid.Triggers>
 
         <!-- Notification area -->
-        <Border BorderThickness="1" CornerRadius="5" Padding="10" MaxHeight="300" BorderBrush="{DynamicResource border}">
+        <Border BorderThickness="1" CornerRadius="5" Padding="10" MaxHeight="300" BorderBrush="{DynamicResource border}" Background="{DynamicResource colorNeutralBackground1}">
             <Grid x:Name="grid">
                 <Grid.RowDefinitions>
                     <RowDefinition MaxHeight="60"/>
