--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<ui:FluentWindow
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,12 +7,26 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="copy_flash_wpf.MainWindow"
     mc:Ignorable="d"
     Title="MainWindow" Height="450" Width="500" 
-    Background="{DynamicResource colorNeutralBackground1}" Foreground="{DynamicResource colorNeutralForeground1}">
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Background="{DynamicResource colorNeutralBackground1}"
+    Foreground="{DynamicResource colorNeutralForeground1}"
+    ui:Design.Background="{DynamicResource colorNeutralBackground1}"
+    ui:Design.Foreground="{DynamicResource colorNeutralForeground1}"
+    ExtendsContentIntoTitleBar="True"
+    WindowBackdropType="Mica"
+    WindowStartupLocation="CenterScreen"
+    WindowCornerPreference="Round">
     <Grid>
-        <ui:Button x:Name="myButton" Click="myButton_Click" Content="Click me" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <ui:TextBlock x:Name="copyText" HorizontalAlignment="Center" TextWrapping="Wrap" Text="copytext" VerticalAlignment="Top" Margin="0,279,0,0"/>
-        <ui:Flyout Margin="185,342,0,0" VerticalAlignment="Top" Width="179">
-            <ui:TextBox TextWrapping="Wrap" Text="TextBox" Width="120"/>
-        </ui:Flyout>
+        <ui:TextBlock x:Name="copyText" HorizontalAlignment="Center" TextWrapping="Wrap" Text="placeholder" VerticalAlignment="Center" Margin="0,0,0,0"/>
+        <ui:TitleBar
+            x:Name="TitleBar"
+            Title="CopyFlash"
+            Grid.Row="0"
+            CloseWindowByDoubleClickOnIcon="True">
+            <ui:TitleBar.Icon>
+                <ui:ImageIcon Source="/assets/icons/ic_fluent_clipboard_checkmark_16_filled.ico" />
+            </ui:TitleBar.Icon>
+        </ui:TitleBar>
     </Grid>
-</Window>
+</ui:FluentWindow>
