--- a/Flyout.xaml
+++ b/Flyout.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:emoji="clr-namespace:Emoji.Wpf;assembly=Emoji.Wpf"
     x:Class="copy_flash_wpf.Flyout"
     Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
     WindowStyle="None" AllowsTransparency="True" Background="Transparent"
@@ -49,7 +50,7 @@
                     <ui:SymbolIcon x:Name="icon2" Visibility="Visible" Margin="0 0 15 0" FontSize="26" Filled="True"/>
                     <ui:InfoBadge x:Name="amount" Visibility="Collapsed" Value="0" Severity="Informational" Margin="-10,-10,15,14"/>
                 </Grid>
-                <TextBlock x:Name="text" 
+                <emoji:TextBlock x:Name="text" 
                            TextWrapping="Wrap" 
                            TextTrimming="CharacterEllipsis"
                            Grid.Column="2"
@@ -61,7 +62,7 @@
                            FontSize="20" 
                            LineHeight="20">
                     <Run Text="Text to display."/>
-                </TextBlock>
+                </emoji:TextBlock>
 
                 <ui:Image x:Name="flyoutImage"
                           Margin="0 10 0 0"
