--- a/App.xaml
+++ b/App.xaml
@@ -9,7 +9,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Light"/>
-                <ResourceDictionary Source="Themes/Light.xaml" x:Name="ThemeResourceDictionary"/>
+                <ResourceDictionary Source="Resources/Light.xaml" x:Name="ThemeResourceDictionary"/>
                 <ResourceDictionary Source="CommonResources.xaml"/>
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
