--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -17,6 +17,7 @@
             <RowDefinition/>
             <RowDefinition Height="30"/> 
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         
         <ui:TextBlock Text="General" Grid.Row="0" Appearance="Primary" FontSize="36" FontTypography="BodyStrong" Margin="0 0 0 10"/>
@@ -45,6 +46,20 @@
                 </StackPanel>
             </ui:CardControl.Header>
             <ui:ToggleSwitch IsChecked="{Binding StartMinimized}"/>
+        </ui:CardControl>
+
+        <ui:CardControl Icon="{ui:SymbolIcon EyeOff24}" Grid.Row="5" Margin="0 0 0 10">
+            <ui:CardControl.Header>
+                <StackPanel>
+                    <ui:TextBlock Text="Minimize to system tray" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock Appearance="Secondary" TextWrapping="WrapWithOverflow">
+                        <Run Text="Lets"/>
+                        <Run Text="{StaticResource ProgramName}"/>
+                        <Run Text="run in the background when minimized, without appearing on the taskbar (Recommended)"/>
+                    </ui:TextBlock>
+                </StackPanel>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding MinimizeToTray}"/>
         </ui:CardControl>
     </Grid>
 </Page>
