--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,9 +8,11 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
     x:Class="copy_flyouts.MainWindow"
     mc:Ignorable="d"
-    Title="{StaticResource ProgramName}" Height="450" Width="500" 
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    Title="{StaticResource ProgramName}" 
+    Height="600" 
+    Width="700" 
+    d:DesignHeight="600"
+    d:DesignWidth="700"
     Background="{DynamicResource colorNeutralBackground1}"
     Foreground="{DynamicResource colorNeutralForeground1}"
     ui:Design.Background="{DynamicResource colorNeutralBackground1}"
