--- a/App.xaml
+++ b/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:copy_flyouts"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:tb="http://www.hardcodet.net/taskbar" 
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
