--- a/Windows/Flyout.xaml
+++ b/Windows/Flyout.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     x:Class="copy_flyouts.Flyout"
     Title="Flyout" SizeToContent="WidthAndHeight" MaxWidth="600"
     WindowStyle="None" AllowsTransparency="True" Background="Transparent"
@@ -32,7 +33,7 @@
         </Grid.Triggers>
 
         <!-- Notification area -->
-        <Border BorderThickness="1" CornerRadius="5" Padding="10" MaxHeight="300" BorderBrush="{DynamicResource border}" Background="{DynamicResource colorNeutralBackground1}">
+        <Border BorderThickness="1" CornerRadius="5" Padding="10" MaxHeight="300" BorderBrush="{DynamicResource border}" Background="{DynamicResource colorNeutralBackground1}" Opacity="{Binding FlyoutOpacity}">
             <Grid x:Name="grid">
                 <Grid.RowDefinitions>
                     <RowDefinition MaxHeight="60"/>
