Add reset buttons

--- a/Pages/About.xaml
+++ b/Pages/About.xaml
@@ -16,7 +16,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <ui:TextBlock Text="About" Grid.Row="0" Appearance="Primary" FontSize="36" FontTypography="BodyStrong" Margin="0 0 0 10"/>
+        <ui:TextBlock Text="About" Grid.Row="0" Appearance="Primary" FontSize="36" FontTypography="BodyStrong" Margin="0 0 0 10" Foreground="{DynamicResource colorNeutralForeground1}"/>
+        
         <ui:CardControl Icon="{ui:SymbolIcon Link24}" Grid.Row="1">
             <ui:CardControl.Header>
                 <StackPanel>
